@@ -1,6 +1,7 @@
 5.3: ??/??/2020
 	* CORE: More improvements to the TransactionManager connection and savepoint handling.
 	* CORE: Added a getInternalConnection() method to DatabaseConnection to access underlying objects.
+	* CORE: Added support for ORDER BY ... NULLS FIRST and LAST.  May not be supported by all database types.
 	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
 	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.
 
